# difficient

./: Cargo.toml  README.md
difficient-macros/: Cargo.toml
difficient-macros/src/: lib.rs
src/: chrono.rs  lib.rs  uuid.rs
tests/: integration.rs
