[package]
name = "difficient"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "difficient-macros",
]

[dependencies]
chrono = { version = "0.4", optional = true }
difficient-macros = "0.1"
uuid = { version = "1", optional = true }

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]

[patch.crates-io]
difficient-macros = { path = "difficient-macros" }
